--- a/viikko3/web-login/report.html
+++ b/viikko3/web-login/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,4034],[[4,5,6,0,[],[1,6,1213],[],[[7,0,0,[],[1,1024,100],[]],[9,0,0,[],[1,1124,33],[]]],[],[2,2,0,0]],[8,11,12,0,[],[1,1219,1295],[],[[13,0,0,[],[1,1974,269],[]],[14,0,0,[],[1,2243,105],[]],[15,0,0,[],[1,2348,104],[]]],[],[3,3,0,0]],[10,16,17,0,[],[1,2515,1518],[],[[18,0,0,[],[1,3264,295],[]],[19,0,0,[],[1,3559,135],[]],[20,0,0,[],[1,3694,141],[]],[21,0,0,[],[1,3836,135],[]]],[],[4,4,0,0]]],[],[],[9,9,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,4401],[[4,5,6,0,[],[1,6,1052],[],[[7,0,0,[],[1,865,102],[]],[9,0,0,[],[1,967,33],[]]],[],[2,2,0,0]],[8,11,12,0,[],[1,1059,1292],[],[[13,0,0,[],[1,1818,254],[]],[14,0,0,[],[1,2072,107],[]],[15,0,0,[],[1,2179,110],[]]],[],[3,3,0,0]],[10,16,17,0,[],[1,2351,2049],[],[[18,0,0,[],[1,3087,311],[]],[19,0,0,[],[1,3398,145],[]],[20,0,0,[],[1,3543,145],[]],[21,0,0,[],[1,3688,142],[]],[22,0,0,[],[1,3830,270],[]],[23,0,0,[],[1,4100,238],[]]],[],[6,6,0,0]]],[],[],[11,11,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/oskar/ohjelmistotuotanto-palautukset/viikko3/web-login/src/tests","*src/tests","*Home","*/Users/oskar/ohjelmistotuotanto-palautukset/viikko3/web-login/src/tests/home.robot","*src/tests/home.robot","*Click Login Link","*Login","*Click Register Link","*Register","*/Users/oskar/ohjelmistotuotanto-palautukset/viikko3/web-login/src/tests/login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password","*Login With Nonexistent Username","*/Users/oskar/ohjelmistotuotanto-palautukset/viikko3/web-login/src/tests/register.robot","*src/tests/register.robot","*Register With Valid Username And Password","*Register With Too Short Username And Valid Password","*Register With Valid Username And Invalid Password","*Register With Nonmatching Password And Password Confirmation"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/oskar/ohjelmistotuotanto-palautukset/viikko3/web-login/src/tests","*src/tests","*Home","*/Users/oskar/ohjelmistotuotanto-palautukset/viikko3/web-login/src/tests/home.robot","*src/tests/home.robot","*Click Login Link","*Login","*Click Register Link","*Register","*/Users/oskar/ohjelmistotuotanto-palautukset/viikko3/web-login/src/tests/login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password","*Login With Nonexistent Username","*/Users/oskar/ohjelmistotuotanto-palautukset/viikko3/web-login/src/tests/register.robot","*src/tests/register.robot","*Register With Valid Username And Password","*Register With Too Short Username And Valid Password","*Register With Valid Username And Invalid Password","*Register With Nonmatching Password And Password Confirmation","*Login After Successful Registration","*Login After Failed Registration"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":9,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s1","label":"Tests.Home","name":"Home","pass":2,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s2","label":"Tests.Login","name":"Login","pass":3,"skip":0},{"elapsed":"00:00:02","fail":0,"id":"s1-s3","label":"Tests.Register","name":"Register","pass":4,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:02","fail":0,"label":"All Tests","pass":11,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":11,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s1","label":"Tests.Home","name":"Home","pass":2,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s2","label":"Tests.Login","name":"Login","pass":3,"skip":0},{"elapsed":"00:00:02","fail":0,"id":"s1-s3","label":"Tests.Register","name":"Register","pass":6,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1699727540004;
+window.output["baseMillis"] = 1699728524524;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4040;
+window.output["generated"] = 4408;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
